fixed layout bugs

--- a/src/components/elements/FindFood/popup.module.scss
+++ b/src/components/elements/FindFood/popup.module.scss
@@ -11,7 +11,7 @@
   background: $white-color;
   border-radius: 8px;
 
-  width: calc(70% - 199px - 16px);
+  width: calc(100% - 199px - 16px);
   min-width: 199px;
 
   box-shadow: 0 15px 25px 0 rgba(0, 0, 0, .15);
@@ -105,7 +105,7 @@
   }
 }
 
-@media(max-width:495px) {
+@media(max-width:555px) {
   .popup {
     width: 100%;
   }
