--- a/src/components/elements/Header/mobileMenu.module.scss
+++ b/src/components/elements/Header/mobileMenu.module.scss
@@ -8,7 +8,7 @@
 
   background-color: transparent;
 
-  @media(max-width:350px) {
+  @media(max-width:410px) {
     width: 25px;
   }
 }
@@ -153,6 +153,8 @@
 @media(max-width:1190px) {
 
   .mobileMenu {
-    display: block;
+    display: flex;
+    gap: 15px;
+    align-items: center;
   }
 }
