--- a/src/components/pages/SearchPage/searchPage.module.scss
+++ b/src/components/pages/SearchPage/searchPage.module.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/variables";
 
 .searchPage {
-  padding-top: 150px;
+  padding-top: 138px;
   min-height: 100vh;
 }
 
